--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "space-travelers-hub",
   "version": "0.1.0",
   "private": true,
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0-alpha3",
     "prop-types": "^15.8.1",
@@ -17,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-test-renderer": "^18.2.0",
     "redux-logger": "^3.0.6",
+    "user-event": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,6 +55,7 @@
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.27.5",
